--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsup src/index.ts",
-    "quick-test": "tsup src/index.ts && node dist/index.js echo \"hello world\"",
+    "quick-test": "tsup src/index.ts && node dist/index.js monitor",
     "test": "test"
   },
   "repository": {
@@ -34,6 +34,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@anastasia-labs/smart-handles-offchain": "^0.1.0",
+    "@commander-js/extra-typings": "^12.1.0",
     "commander": "^12.1.0",
     "kleur": "^4.1.5"
   }
