--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Monitoring CLI application for routing requests submitted to smart handles script on Cardano",
   "main": "index.js",
   "scripts": {
-    "build": "tsup src/index.ts",
-    "quick-test": "tsup src/index.ts && node dist/index.js monitor",
+    "build": "tsup src/index.ts --format esm",
+    "quick-test": "tsup src/index.ts --format esm && node dist/index.js monitor --help",
     "test": "test"
   },
   "type": "module",
@@ -38,7 +38,8 @@
   "dependencies": {
     "@anastasia-labs/smart-handles-offchain": "^0.1.0",
     "@commander-js/extra-typings": "^12.1.0",
-    "commander": "^12.1.0",
-    "kleur": "^4.1.5"
-  }
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0"
+  },
+  "packageManager": "pnpm@9.0.4+sha1.b198ac6d38244fd829253720f9daafd6a606834d"
 }
