--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "@anastasia-labs/smart-handles-offchain": "^0.1.0",
     "@commander-js/extra-typings": "^12.1.0",
     "chalk": "^5.3.0",
-    "commander": "^12.1.0",
-    "effect": "^3.2.5"
+    "commander": "^12.1.0"
   },
   "packageManager": "pnpm@9.0.4+sha1.b198ac6d38244fd829253720f9daafd6a606834d"
 }
