refactor: rename package

--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "smart-handles-agent",
+  "name": "@anastasia-labs/smart-handles-cli",
   "version": "0.1.0",
-  "description": "Monitoring CLI application for routing requests submitted to smart handles script on Cardano",
-  "main": "./dist/index.js",
+  "description": "CLI application for submitting and routing requests to a smart handles script on Cardano",
+  "main": "./dist/smart-handles-cli.js",
   "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --minify --format esm",
-    "quick-test": "tsup src/index.ts --format esm && node dist/index.js monitor --help",
+    "build": "tsup src/smart-handles-cli.ts --minify --format esm",
+    "quick-test": "tsup src/smart-handles-cli.ts --format esm && node dist/smart-handles-cli.js --help",
+    "repack": "pnpm run build  && pnpm pack",
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anastasia-Labs/smart-handles-agent.git"
+    "url": "git+https://github.com/Anastasia-Labs/smart-handles-cli.git"
   },
   "keywords": [
     "cardano",
@@ -26,19 +27,19 @@
   "author": "Anastasia Labs",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Anastasia-Labs/smart-handles-agent/issues"
+    "url": "https://github.com/Anastasia-Labs/smart-handles-cli/issues"
   },
   "bin": {
-    "smart-handles-agent": "./dist/index.js"
+    "smart-handles-cli": "./dist/smart-handles-cli.js"
   },
-  "homepage": "https://github.com/Anastasia-Labs/smart-handles-agent#readme",
+  "homepage": "https://github.com/Anastasia-Labs/smart-handles-cli#readme",
   "devDependencies": {
     "@types/node": "^20.12.12",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@anastasia-labs/smart-handles-offchain": "file:./anastasia-labs-smart-handles-offchain-0.3.0.tgz",
+    "@anastasia-labs/smart-handles-offchain": "file:anastasia-labs-smart-handles-offchain-0.3.0.tgz",
     "@commander-js/extra-typings": "^12.1.0",
     "ts-node": "^10.9.2",
     "chalk": "^5.3.0",
