refactor: rearrange structure for exposing types

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "@anastasia-labs/smart-handles-cli",
   "version": "0.1.0",
   "description": "CLI application for submitting and routing requests to a smart handles script on Cardano",
-  "main": "./dist/smart-handles-cli.js",
+  "main": "dist/smart-handles-cli.js",
   "type": "module",
+  "types": "dist/types/router.config.d.ts",
+  "bin": {
+    "smart-handles-cli": "./bin/smart-handles-cli.js"
+  },
   "files": [
-    "dist"
+    "dist",
+    "bin"
   ],
   "scripts": {
     "build": "tsup src/smart-handles-cli.ts --minify --format esm",
@@ -28,9 +33,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Anastasia-Labs/smart-handles-cli/issues"
-  },
-  "bin": {
-    "smart-handles-cli": "./dist/smart-handles-cli.js"
   },
   "homepage": "https://github.com/Anastasia-Labs/smart-handles-cli#readme",
   "devDependencies": {
