--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "@anastasia-labs/smart-handles-cli",
   "version": "0.1.0",
   "description": "CLI application for submitting and routing requests to a smart handles script on Cardano",
-  "main": "dist/smart-handles-cli.js",
+  "main": "./dist/smart-handles-cli.js",
   "type": "module",
-  "types": "dist/types/router.config.d.ts",
   "bin": {
-    "smart-handles-cli": "./bin/smart-handles-cli.js"
+    "smart-handles-cli": "./dist/smart-handles-cli.js"
   },
   "files": [
-    "dist",
-    "bin"
+    "dist"
   ],
   "scripts": {
     "build": "tsup src/smart-handles-cli.ts --minify --format esm",
