--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "@anastasia-labs/smart-handles-cli",
+  "name": "@anastasia-labs/smart-handles-agent",
   "version": "0.1.0",
-  "description": "CLI application for submitting and routing requests to a smart handles script on Cardano",
-  "main": "dist/smart-handles-cli.js",
+  "description": "Provider for making CLI application for submitting and routing requests to a smart handles script on Cardano",
+  "main": "dist/index.js",
   "type": "module",
-  "bin": {
-    "smart-handles-cli": "dist/smart-handles-cli.js"
-  },
-  "files": [
-    "/dist/"
-  ],
   "scripts": {
-    "build": "tsup src/smart-handles-cli.ts --minify --format esm",
-    "quick-test": "tsup src/smart-handles-cli.ts --format esm && node dist/smart-handles-cli.js --help",
+    "build": "tsup src/index.ts --minify --format esm",
+    "quick-test": "tsup src/index.ts --format esm && node dist/index.js --help",
     "repack": "pnpm run build  && pnpm pack",
     "test": "test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Anastasia-Labs/smart-handles-cli.git"
+    "url": "git+https://github.com/Anastasia-Labs/smart-handles-agent.git"
   },
   "keywords": [
     "cardano",
@@ -30,9 +24,9 @@
   "author": "Anastasia Labs",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Anastasia-Labs/smart-handles-cli/issues"
+    "url": "https://github.com/Anastasia-Labs/smart-handles-agent/issues"
   },
-  "homepage": "https://github.com/Anastasia-Labs/smart-handles-cli#readme",
+  "homepage": "https://github.com/Anastasia-Labs/smart-handles-agent#readme",
   "devDependencies": {
     "@types/node": "^20.12.12",
     "tsup": "^8.0.2",
@@ -41,7 +35,6 @@
   "dependencies": {
     "@anastasia-labs/smart-handles-offchain": "file:anastasia-labs-smart-handles-offchain-0.3.0.tgz",
     "@commander-js/extra-typings": "^12.1.0",
-    "ts-node": "^10.9.2",
     "chalk": "^5.3.0",
     "commander": "^12.1.0"
   },
