fix: resolve generation of typings
Also removed import of `package.json` as it seemed too much of a hassle
to preserve DRY in this case.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true,
