--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@anastasia-labs/smart-handles-offchain": "file:anastasia-labs-smart-handles-offchain-0.3.0.tgz",
+    "@anastasia-labs/smart-handles-offchain": "^0.3.0",
     "@commander-js/extra-typings": "^12.1.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0"
