--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "lint": "eslint",
     "repack": "pnpm run build  && pnpm pack",
     "test": "test"
   },
@@ -33,7 +34,11 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0"
   },
   "dependencies": {
     "@anastasia-labs/smart-handles-offchain": "^0.3.0",
