--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anastasia-labs/smart-handles-agent",
-  "version": "0.3.2",
+  "version": "0.3.1",
   "description": "Provider for making CLI application for submitting and routing requests to a smart handles script on Cardano",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -33,12 +33,12 @@
   "homepage": "https://github.com/Anastasia-Labs/smart-handles-agent#readme",
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0"
   },
   "dependencies": {
     "@anastasia-labs/smart-handles-offchain": "^0.3.2",
